syntax = "proto3";

package dalalstreet.socketapi.models;

message StockHistory {
  int32 stock_id = 1;
  int32 stock_price = 2;
  string created_at = 3;
}
